# espionox

./: .gitignore  .gitmodules  ;  CHANGELOG.md  Cargo.toml  README.md  init_db.sh  pane.txt  start_session.sh
.espionox_config/: prompts.yaml
.espionox_config/env/: default.yaml  testing.yaml
configuration/: default.yaml  default_example.yaml  testing.yaml
examples/: decomposition.rs  forgetful.rs  rag.rs  summarize_at_limit.rs
migrations/: 20230711195509_files.up.sql  20230711195542_directories.down.sql  20230711195542_directories.up.sql  20230711195621_file_chunks.down.sql  20230711195621_file_chunks.up.sql  20230716181355_vector_extension.down.sql  20230716181355_vector_extension.up.sql  20230716181534_files.down.sql  20230716181534_files.up.sql  20230716181615_file_chunks.up.sql  20230716181926_errors.down.sql  20230716181926_errors.up.sql  20230716182153_contexts.down.sql  20230716182153_contexts.up.sql  20230716182153_threads.down.sql  20230716182153_threads.up.sql  20230725175816_messages.down.sql  20230725175816_messages.up.sql  20230821223629_io.down.sql  20230821223629_io.up.sql  20230905014847_init.down.sql  20230905014847_init.up.sql
scripts/: init_db.rs  init_db.sh
src/: config.rs  configuration.rs  errors.rs  interface.rs  lib.rs  main.rs  panes.rs  start.sh  telemetry.rs  tests.rs  walk.rs
src/agent/: agents.rs  errors.rs  fn_enums.rs  fn_render.rs  functions.rs  gpt.rs  gpt_complete.rs  handler.rs  mod.rs  settings.rs  spo_agents.rs  streaming_utils.rs  watcher.rs
src/agent/api/: gpt.rs  mod.rs
src/agent/config/: context.rs  memory.rs
src/agent/context/: config.rs  manager.rs  mod.rs  tmux_session.rs  walk.rs
src/agent/functions/: config.rs  enums.rs  mod.rs
src/agent/handler/: context.rs  controller.rs  mod.rs
src/agent/spo_agents/: mod.rs  summarizer.rs
src/agents/: actions.rs  error.rs  errors.rs  independent.rs  listeners.rs  mod.rs  streaming_utils.rs
src/agents/language_models/: mod.rs
src/agents/memory/: message_stack.rs  message_vector.rs  messages.rs  mod.rs
src/agents/spo_agents/: mod.rs  observer.rs  summarizer.rs
src/api/: gpt.rs  mod.rs
src/api/database/: db.rs
src/context/: memory.rs  messages.rs  mod.rs
src/context/integrations/: core.rs  database.rs  mod.rs
src/context/memory/: builder.rs  messages.rs  mod.rs  short_term.rs
src/core/: directories.rs  file_interface.rs  files.rs  io.rs  mod.rs
src/core/tmux/: mod.rs  pane.rs  session.rs
src/database/: api.rs  db.rs  init.rs  mod.rs  models.rs
src/database/handlers/: error.rs  file.rs  file_chunks.rs  message.rs  messages.rs  threads.rs
src/database/models/: error.rs  file.rs  file_chunks.rs  message.rs  messages.rs  mod.rs  threads.rs
src/database/vector_embeddings/: mod.rs  sqlx_wrapper.rs
src/environment/: agent_handle.rs  env_handle.rs  errors.rs  mod.rs  notification_stack.rs
src/environment/agent/: mod.rs  utils.rs
src/environment/dispatch/: channel.rs  listeners.rs  mod.rs
src/facade/: mod.rs
src/features/: mod.rs
src/features/filesys/: directories.rs  files.rs  mod.rs
src/features/integrations/: database.rs  mod.rs
src/features/long_term_memory/: mod.rs  sql_message.rs
src/features/tools/: mod.rs  vision.rs  websurf.rs
src/handler/: agent.rs  integrations.rs  memorable.rs  mod.rs  operations.rs  settings.rs  sops.rs  spec_agent.rs  temp.rs
src/interface/: terminal.rs
src/interfaces/: mod.rs  terminal.rs
src/interfaces/egui/: backend.rs  frontend.rs  integration.rs  mod.rs  window.rs
src/io/: commander.rs  file_interface.rs  mod.rs
src/io/tmux/: pane.rs
src/language_models/: anthropic.rs  bert.rs  completion_handler.rs  endpoint_completions.rs  error.rs  gpt.rs  inference.rs  mod.rs
src/language_models/anthropic/: mod.rs
src/language_models/completions/: error.rs  inference.rs  mod.rs
src/language_models/embeddings/: error.rs  inference.rs  mod.rs  (+1 more)
src/lib/: mod.rs
src/memory/: builder.rs  cache.rs  caching.rs  error.rs  long_term.rs  message.rs  message_vector.rs  messages.rs  mod.rs  traits.rs
src/persistance/: mod.rs  prompts.rs
src/session/: mod.rs  pane.rs
src/tests/: agents.rs  api.rs  context.rs  database.rs  functions.rs  functions_tests.rs  io.rs  language_models.rs  mod.rs
src/tools/: vision.rs
test-dir/: test2.txt
tests/: agent.rs  context.rs  database.rs  handler.rs  io.rs  language_models.rs  mod.rs
tests/agent/: context.rs  functions.rs  handler.rs  memory.rs  mod.rs
tests/api/: agent.rs  context.rs  core.rs  database.rs  environment.rs  examples.rs  features.rs  functions.rs  helpers.rs  language_models.rs  main.rs  memory.rs  persistance.rs
(+110 files in other folders)
