[package]
name = "consoxide"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "consoxide"
path = "src/main.rs"

[[bin]]
name = "init_db" 
path = "scripts/init_db.rs"


[dependencies]

dotenv = "0.15.0"
anyhow = "1.0.71"
rust-bert = "0.21.0"
tch = "0.13.0"
inquire = "0.6.2"
reqwest = { version = "0.11.18", features = ['json', 'stream']}
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.4.0"
pgvector = { version = "0.2.2", features = ["sqlx"] }

tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
once_cell = "1.18.0"
futures = "0.3.28"
futures-util = "0.3.28"
bytes = "1.4.0"
colored = "2.0.4"
serde-aux = "4.2.0"
config = "0.13.3"
rand = "0.8.5"
byteorder = "1.4.3"
