[package]
name = "espionox"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A library for creating multi-agent workflows in Rust"
homepage="https://github.com/voidKandy/Espionox"
repository="https://github.com/voidKandy/Espionox"
readme="README.md"
keywords = ["Prompt Engineering", "LLM Agents"]
categories= ["Language model libraries", "Ai Agents"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "summarize_at_limit"
path = "examples/summarize_at_limit.rs"


[features]
default = [
  # "long_term_memory",
 "filesys"
]
long_term_memory = ["dep:sqlx", "dep:pgvector"]
filesys = []


[dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"], optional = true }
pgvector = { version = "0.2.2", features = ["sqlx", "postgres"], optional = true }

anyhow = "1.0.71"
rust-bert = "0.21.0"
tch = "0.13.0"
reqwest = { version= "0.11.18", features = ['json', 'stream']}
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.4.0"

tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }

once_cell = "1.18.0"
futures = "0.3.28"
futures-util = "0.3.28"
bytes = "1.4.0"
serde-aux = "4.2.0"
rand = "0.8.5"
byteorder = "1.4.3"
thiserror = "1.0.48"
serde_yaml = "0.9.25"
async-recursion = "1.0.5"
reqwest-streams = { version = "0.3.0", features=["json"] }
dotenv = "0.15.0"

