[package]
name = "espionox"
version = "0.1.30"
license = "MIT OR Apache-2.0"
description = "A library for creating multi-agent workflows in Rust"
homepage="https://github.com/voidKandy/espionox"
repository="https://github.com/voidKandy/espionox"
readme="README.md"
keywords = []
categories= []
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "summarize_at_limit"
path = "examples/summarize_at_limit.rs"
[[example]]
name = "forgetful"
path = "examples/forgetful.rs"
[[example]]
name = "rag"
path = "examples/rag.rs"


[features]
default = [
 # "tools"
 # "embedding_sql"
    # "bert",
]
tools = ["dep:scraper", "dep:headless_chrome", "dep:base64"]

# Not sure if this is a feature anymore
embedding_sql = ["dep:sqlx", "dep:pgvector"]

bert = ["dep:rust-bert", "dep:tch"]



 


[dependencies]
# llm = { git = "https://github.com/rustformers/llm" , branch = "main", optional = true  }
# , optional=true 
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"], optional = true }
pgvector = { version = "0.2.2", features = ["sqlx", "postgres"], optional = true }
scraper = { version = "0.18.1" , optional = true }
headless_chrome = { version = "1.0.9", optional = true}
base64 = { version = "0.21.7", optional = true }
rust-bert = { version = "0.21.0", optional = true }
tch = {version = "0.13.0", optional = true }

anyhow = "1.0.71"
reqwest = { version= "0.11.18", features = ['json', 'stream']}
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
uuid = {version = "1.4.0", features = ["v4"]}

tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }

once_cell = "1.18.0"
futures = "0.3.28"
futures-util = "0.3.28"
bytes = "1.4.0"
thiserror = "1.0.48"
reqwest-streams = { version = "0.3.0", features=["json"] }
dotenv = "0.15.0"

